# Heater-UI-Yandex

./: .gitignore  README.md
Doc/: Heater-Yandex-UI-BlockDiagram.drawio
EEZ-8x/: Heater-Yandex-UI-8x.eez-project  Heater-Yandex-UI-8x.eez-project-ui-state
EEZ-9x/: Heater-Yandex-UI.eez-project  Heater-Yandex-UI.eez-project-ui-state
Images/: WiFi_base.psd  WiFi_base_43x25.psd
Src/: CMakeLists.txt  partitions.csv
Src/main/: CMakeLists.txt  Kconfig.projbuild  heater-yandex.c  idf_component.yml  lgfx_wrapper.cpp  lgfx_wrapper.h  wifi_sta.c  wifi_sta.h
Src/main/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui_font_bebas_120.c  ui_image_server_bmp.c  ui_image_wifi_100_bmp.c  ui_image_wifi_25_bmp.c  ui_image_wifi_50_bmp.c  ui_image_wifi_75_bmp.c  ui_image_wifi_no_bmp.c
