idf_component_register(SRCS "wifi_sta.c" "heater-yandex.c"
                            "lgfx_wrapper.cpp"
                            "ui/styles.c" 
                            "ui/images.c" 
                            "ui/screens.c" 
                            "ui/styles.c" 
                            "ui/ui.c"
                            "ui/ui_font_bebas_120.c"
                            "ui/ui_image_wi_fi_small.c"
                            "ui/ui_image_server_bmp.c" 
                            "ui/ui_image_wifi_25_bmp.c"
                            "ui/ui_image_wifi_50_bmp.c"
                            "ui/ui_image_wifi_75_bmp.c"
                            "ui/ui_image_wifi_100_bmp.c"
                            "ui/ui_image_wifi_no_bmp.c"
                    INCLUDE_DIRS "." "ui")